features are autmatically applied when starting a new buffer.
+New plugin "CommentBrowser" for listing and browsing TODO statements in the
current buffer is available.
+Two new icon themes available (Crystal Project and Ubuntoon)
+All existing icon themes have recieved some minor updates
+Improved Windows installer / Better Windows Desktop integration
+Jump word pre/next keybindings (Ctrl+<- and Ctrl+->)

BUG FIXES:
+Fix bug with turning off syntax highlighting in the preference dialog
+Exiting Editra from a right click on the Windows taskbar saving invalid window
size and postion for next launch.
+Add some missing Ruby keywords

#-----------------------------------------------------------------------------#

VERSION 0.2.50
DATE 01/19/2008
9th Alpha Release

NEWS:

I am happy to announce the first release of Editra for 2008. It has been a 
slightly longer that usual development cycle for this release so hopefully 
extra amount of work that went in will be visible. Here are some of the most 
notable points in this release, there is a new version of the bundled 
FileBrowser plugin that has been enhanced to be able handle most file system 
operations. There were also a number of UI and usability improvements made to 
the editor, as well as support for some new programming languages. Besides the 
new features and improvements there are a number of bugs that have been fixed 
to further stabilize the editor.

NEW: [features/improvements]
+Number of major enhancements to the FileBrowser plugin
+Support for highlighting PL/SQL and improved SQL highlighting (contributed by Thomas Keul)
+Support for highlighting (Boo, Pike) programming languages
+New highlighting color scheme "BlueMonday" (by Thomas Keul)
+Shift+Ctrl+I will toggle usage of Tabs and Soft Tabs.
+Shift+Ctrl+C to duplicate current line
+F3/Shift+F3 can be used as shortcuts for Find Next/Find Previous in the quick
 find bar. These bindings are in addition to the already existing 
 Enter/Shift+Enter ones.